--- a/HomeShareMVC/Content/style.css
+++ b/HomeShareMVC/Content/style.css
@@ -1,7 +1,7 @@
 @font-face {
 font-family: 'din';
-src: url('fonts/din.eot');
-src: url('fonts/din.eot?#iefix') format('embedded-opentype'), url('fonts/din.woff') format('woff'), url('fonts/din.ttf') format('truetype'), url('fonts/din.svg#din') format('svg');
+src: url('../fonts/din.eot');
+src: url('../fonts/din.eot?#iefix') format('embedded-opentype'), url('../fonts/din.woff') format('woff'), url('../fonts/din.ttf') format('truetype'), url('../fonts/din.svg#din') format('svg');
 font-weight: normal;
 font-style: normal;
 }
@@ -121,7 +121,7 @@ table{background-color: #fff;}
 
 
 /*footer*/
-.footer{background:url(../images/bg.jpg) #222; padding: 20px 0; color: #999;} 
+.footer{background:url(images/bg.jpg) #111; padding: 20px 0; color: #999;} 
 .footer h4{color: #fff;border-bottom: 2px solid #131313;margin-bottom: 10px;padding-bottom: 10px;}
 .footer ul{list-style: none;padding: 0; }
 .footer a:hover{color: #fff;}
