--- a/HomeShareMVC/Views/Shared/_Layout.cshtml
+++ b/HomeShareMVC/Views/Shared/_Layout.cshtml
@@ -8,8 +8,7 @@
     <title>@ViewBag.Title - HomeShareMVC</title>
 
     @Styles.Render("~/Content/css")
-    @Styles.Render("~/Assets/css")
-    @Styles.Render("~/Assets/bootstrap")
+     @Styles.Render("~/Assets/bootstrap")
     @Styles.Render("~/Assets/owl-carousel")
     @Styles.Render("~/Assets/slitslider")
 
@@ -80,7 +79,7 @@
     <div class="container body-content">
         @RenderBody()
         <hr />
-        <footer>
+        <div class="footer">
 
             <div class="row">
                 <div class="col-lg-3 col-sm-3">
@@ -105,9 +104,9 @@
                 </div>
             </div>
             <p class="copyright">Copyright 2015. All rights reserved.	</p>
-            
-        </footer>
-    </div>
+
+            </div>
+        </div>
 
     @RenderSection("scripts", required: false)
 </body>
