--- a/HomeShareMVC/Views/Shared/_MeilleursBiens.cshtml
+++ b/HomeShareMVC/Views/Shared/_MeilleursBiens.cshtml
@@ -1,7 +1,8 @@
-﻿@{
-    ViewBag.Title = "_DerniersBiens";
-}
+﻿
 
+@{
+    ViewBag.Title = "_MeilleursBiens";
+}
 
 <div class="col-md-3 col-sm-6 hero-feature">
     <div class="thumbnail">
@@ -24,3 +25,4 @@
         </div>
     </div>
 </div>
+
