--- a/HomeShareMVC/Views/Shared/_Layout.cshtml
+++ b/HomeShareMVC/Views/Shared/_Layout.cshtml
@@ -47,10 +47,10 @@
                 <div class="navbar-collapse  collapse">
                     <ul class="nav navbar-nav navbar-right">
                         <li class="active"><a href="~/Home/Index">Home</a></li>
-                        <li><a href="about.php">A propos de nous</a></li>
-                        <li><a href="agents.php">Les propriétaires</a></li>
-                        <li><a href="blog.php">Les biens en échange</a></li>
-                        <li><a href="contact.php">Contactez-nous</a></li>
+                        <li><a href="~/Home/About">A propos de nous</a></li>
+                        <li><a href="~/Home/Membres">Les propriétaires</a></li>
+                        <li><a href="~/Bien/Biens">Les biens en échange</a></li>
+                        <li><a href="~/Home/Contact">Contactez-nous</a></li>
                     </ul>
                 </div>
                 <!-- #Nav Ends -->
@@ -69,9 +69,9 @@
             <a href="#"><img src="~/Content/images/logo.png" alt="Realestate"></a>
 
             <ul class="pull-right">
-                <li><a href="#">Echanger</a></li>
-                <li><a href="#">Visiter</a></li>
-                <li><a href="#">Se connecter</a></li>
+                <li><a href="~/Membre/Home/Index">Echanger un bien</a></li>
+                <li><a href="~/Membre/Home/Inscription">S'inscrire</a></li>
+                <li><a href="~/Membre/Home/Login">Se connecter</a></li>
             </ul>
         </div>
         <!-- #Header Starts -->
